syntax = "proto3";
package InfraApply;

option go_package = "v1";

import "google/api/annotations.proto";

service INFRAAPPLY {
    // List infra apply
    rpc ListInfraApply (ListInfraApplyReq) returns (ListInfraApplyReply) {
        option (google.api.http) = {
            post: "/InfraApply.INFRAAPPLY/ListInfraApply"
            body: "*"
        };
    }
    // Add infra apply
    rpc AddInfraApply (AddInfraApplyReq) returns (AddInfraApplyReply) {
        option (google.api.http) = {
            post: "/InfraApply.INFRAAPPLY/AddInfraApply"
            body: "*"
        };
    }
    // Update infra apply
    rpc UpdateInfraApply (UpdateInfraApplyReq) returns (UpdateInfraApplyReply) {
        option (google.api.http) = {
            post: "/InfraApply.INFRAAPPLY/UpdateInfraApply"
            body: "*"
        };
    }
    //Delete infra
    rpc DelInfraApply (DelInfraApplyReq) returns (DelInfraApplyReply) {
        option (google.api.http) = {
            post: "/InfraApply.INFRAAPPLY/DelInfraApply"
            body: "*"
        };
    }

}

// page message struct
message ModelPage {
    int32 pageIdx = 1; // begin index is 1
    int32 pageSize = 2; // if pageSize is -1, return all data
    int32 total = 3; // all the records count
}

// List
message ListInfraApplyReq {
    int32 pageIdx = 1;
    int32 pageSize = 2;
    string search = 3; //search by subject name
}

message ListInfraApplyReply {
    ModelPage page = 1;
    repeated DetailInfraApplyReply record = 2;
    bool exhausted = 3;
}

message DetailInfraApplyReply {
    int32 ID = 1;
    string deviceCode = 2;
    string applyer = 3;
    string status = 4;
    string subjectName = 5;
    string reviewId = 6;
    string expireTM = 7;
    string reviewTM = 8;
}

// Add
message AddInfraApplyReq {
    string deviceCode = 1;
    string uid = 2;
    string subjectName = 3;
    string expireTM = 4;
}

message AddInfraApplyReply {
    string result = 1;
}
// Update
message UpdateInfraApplyReq {
    int32 ID = 1;
    string status = 2;
    string expireTM = 3;
}

message UpdateInfraApplyReply {
    string result = 1;
}

// Delete
message DelInfraApplyReq {
    string ID = 1;
    string uid = 2;
}

message DelInfraApplyReply {
    string result = 1;
}